# carrot

./: .gitattributes  .gitignore  MANIFEST.in  README.md  addpath.bat  car.spec  carrot.spec  file_version_info.txt  main.py  main.spec  pyinstaller.spec  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
src/car/: __init__.py  car.py  setup.py
src/carrot/: __init__.py  app.py  repo_test.py  resource.py  setup.py  test.py
src/carrot/controller/: __init__.py  controller.py  event.py
src/carrot/model/: __init__.py  aspect_ratio.py  dimension.py  model.py  point.py  repository.py  selection.py  selection_repository.py  state.py
src/carrot/view/: __init__.py  imageview.py  menu.py  menubar.py  menuitem.py  statusbar.py  statusbarpane.py  toolbar.py  toolbarbutton.py  toolbarseparator.py  tooltip.py  view.py  window.py
